# EdgeSDK

./: CMakeLists.txt  README.md  demo.cpp  global_config.json  peripheral_config.json  run.sh  编译流程.txt
include/: base64.h  edge_interface_impl.h  kafka_producer.h
src/: base64.cpp  edge_interface.cpp  edge_interface_impl.cpp  kafka_producer.cpp
